--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ img {
 .wrapper {
     position: relative;
     width: 100%;
+    height: 900px;
     background-size: cover;
+    overflow-y: auto;
 }
 
 body {
@@ -211,7 +213,7 @@ footer p {
 }
 
 @media screen and (max-width:1150px) { 
-      .formblock { 
+     .formblock { 
         margin-left: 25%;
     }
     
@@ -223,12 +225,30 @@ footer p {
     input[type=email],
     textarea {
         width: 60%;
-    }  
+    }
+
+    #index-main {
+        width: 70%;
+    }
+    
+    #about-main {
+        width: 70%;
+    }
 }
 
-
-@media screen and (max-width:960px) {
-
+@media screen and (max-width:925px) {
+    #about-main {
+        width: 80%;
+    }
+    
+    .col {
+        width: 80%;
+    	margin-left: 10%;
+    	margin-right: 10%;
+    	margin-top: 2em;
+    	margin-bottom: 2em;
+    	padding: .5em; 
+    }
 }
 
 
@@ -262,11 +282,24 @@ footer p {
       text-shadow: 0 1px 1px rgba(255, 255, 255, 0.9);
       background-color: #62A7B5;
     }
-      
-    .wrapper {
-        overflow-y: scroll;
+    
+    #index-main {
+        width: 90%;
     }
     
+    #about-main {
+        width: 90%;
+    }
+    
+    .col {
+        width: 90%;
+    	margin-left: 5%;
+    	margin-right: 5%;
+    	margin-top: 1.5em;
+    	margin-bottom: 1.5em;
+    	padding: .25em; 
+    }
+      
     footer {
         height: 50px;
     }
@@ -280,11 +313,32 @@ footer p {
     textarea {
         width: 90%;
     }
+    
+
 
 }
 
 @media screen and (max-width:400px) {
     .slicknav_nav {
         font-size: 0.8em;
+    }
+    
+    #index {
+        max-height: 1000px;
+    }
+    
+    #index-main {
+        margin: 2em auto;
+        padding: 0.5em;
+    }
+    
+    h1, h2, h3, p {
+        font-size: 1.1em;
+    }
+    
+    #about-main {
+        margin: 2em auto;
+        padding: .5em;
+    }
 }
 
