--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ footer {
 
 footer p {
     text-align: center;
-    margin-bottom: 10px;
+    padding-top: 1em;
 }
 
 
@@ -335,6 +335,10 @@ footer p {
       
     footer {
         height: 50px;
+    }
+    
+    footer p {
+        padding-top: 0.25em;
     }
     
     #contact-form {
